# pico-2w-projects

./: .gitignore  CMakeLists.txt  README.md  audio_streamer.py  check_serial.py  code.py  debug_i2s.c  debug_i2s2.c  debug_minimal.c  debug_pio.c  debug_sos.c  deploy_weather_tft.sh  function_gen.py  gif_player.py  i2s_audio.pio  ip_scanner.py  melody_player.py  read_serial.py  scanner.py  sos_audio.c  sos_flasher.c  stream_sender.py  test_alive.c  tft_test.py  video_player.py  weather_tft.py  wifi_config.example.py  wifi_scan_test.py  wiring.md
